--- a/cs839.tex
+++ b/cs839.tex
@@ -382,12 +382,179 @@ But closed $\not\iff$ continuous over the domain.
 \end{example}
 
 
+\DATE{Sep 16, 2024}
+\begin{theorem}[Weierstrass theorem for closed functions]
+    Let $f: \mathbb{E}\to (-\infty,\infty]$ be a $\underbrace{\text{proper}}_{dom(f)\neq \emptyset}$,
+    closed function and let $C \subseteq \mathbb{E}$ be a compact set such that 
+    $C \bigcap dom(f)\neq \emptyset$. Then:
+    \begin{enumerate}
+        \item $f$ is bounded below on $C$.
+        \item $f$ attains its minimal value over $C$.
+    \end{enumerate}
+\end{theorem}
 
+\begin{proof}
+    \begin{enumerate}
+        \item Suppose for the purpose of contradiction (FPOC) that $f$ is not bounded below on $C$.
+        Then $\exists $a sequence $\{ x_n \}_{n\ge 1}$, $x_n \in C \forall n$, s.t.
+        \begin{align*}
+            \lim_{n \to \infty}f(x_n) = -\infty
+        \end{align*}
+        By Bolzano-Weierstrass, since $C$ is compact, there exists a subsequence $\{ x_{n_k} \}_{k\ge 1}$
+        that converges to a point $\bar{x} \in C$. Since 
+        \begin{align*}
+            f \text{ is closed } \iff f \text{ is l.s.c.}
+        \end{align*}
+        We know 
+        \begin{align*}
+            f(\bar{x}) \le \lim_{k \to \infty}f(x_{n_k}) = -\infty\\
+            \Longrightarrow f(\bar{x}) = -\infty
+        \end{align*}
+        Contradiction.
+        \item Let $f_{*} = \inf_{x \in C} f(x) > -\infty$.
+        \begin{claim}
+            $\exists $ a sequence $\{ x_n    \}_{n \ge 1}$ s.t.
+            \begin{align*}
+                f(x_n) \rightarrow f_{*} \text{ as } n\rightarrow\infty
+            \end{align*}
+        \end{claim}
+        Then $(x_n, f(x_n)) \in epi(f)$. Then take a subsequence $\{ x_{n_{k}} \}_{k\ge 1}$ s.t.
+        $x_{n_{k}} \rightarrow \bar{x}$. Then
+        \begin{align*}
+            f(\bar{x}) \le \lim\inf_{k \rightarrow\infty}f(_{n_{k}}) = f_{*}\\
+            \Longrightarrow \bar{x} \text{ minimizes } f
+        \end{align*}
+    \end{enumerate}
+\end{proof}
 
+What is we are not optimizing over a compact set.
+\begin{definition}
+    A proper function $f: \mathbb{E} \to (-\infty,\infty]$ is said to be coercive if 
+    \begin{align*}
+        \lim_{x \in \mathbb{E}:\| x \|  \to \infty} f(x) = +\infty
+    \end{align*}
+\end{definition}
 
+\begin{theorem}
+    Let $f:\mathbb{E} \to (-\infty,\infty]$ be a proper, closed and coercive function, and let $S
+    \subseteq \mathbb{E}$ be a nonempty closed set that satisfy $S \bigcap dom(f) \neq \emptyset$.
+    Then $f$ attains the minimum over set $S$.
+\end{theorem}
+\begin{proof}
+    Let $x_0$ be an arbitrary point
+\end{proof}
 
+\subsection{Convex Function}
+\begin{definition}[Equivalent definitions of convexity]
+    f is convex if 
+    \begin{enumerate}
+        \item $epi(f)$ is convex
+        \item $\forall x,y \in \mathbb{E}, \forall \alpha \in (0,1)$:
+        \begin{align*}
+            f((1-\alpha)x + \alpha y ) \le (1-\alpha)f(x) + \alpha f(y)
+        \end{align*}
+        \begin{remark}
+            Notice this induces Jensen's inequality: $\forall x_1, \ldots ,x_m \in \mathbb{E},
+            \forall \lambda_1, \ldots ,\lambda_m \ge 0, \sum_{i=1}^{n}\lambda_i = 1$
+            \begin{align*}
+                f(\sum_{i=1}^{m}\lambda_i x_i) \le \sum_{i=1}^{m} \lambda_i f(x_i)
+            \end{align*}
+        \end{remark}
+        \item if $f$ is continuously differentiable: $\forall x,y \in \mathbb{E}$
+        \begin{align*}
+            f(y) \ge f(x) + \langle \nabla f(x),y-x \rangle
+        \end{align*}
+        \item if $f \in C^{2}$: $\forall x \in \mathbb{E}$:
+        \begin{align*}
+            \nabla^{2}f(x) \succcurlyeq 0
+        \end{align*}
+    \end{enumerate}
+\end{definition}
 
+\begin{theorem}[Operations preserving convexity]
+    \begin{enumerate}
+        \item If $A: \mathbb{E} \to \mathbb{V}$ liner transform, $b \in \mathbb{V}$,and $f: \mathbb{V} \to { (-\infty,\infty]}$ is convex, then $f(A(x)+b)$ is convex.
+        \item $f_1, \ldots ,f_{m}: \mathbb{E} \to (-\infty,+ \infty]$ are convex, $\lambda_1, \ldots ,
+        \lambda_n \in \mathbb{R}_{+}$, then $f(x) = \sum_{i=1}^{m} \lambda_i f_i(x)$ is convex.
+        \item $I:$ inded set, $f_i: \mathbb{E} \to (-\infty,\infty]$ convex $\forall i \in I$,
+        then $f(x) = \sup_{i \in I}f_i(x)$ is convex.
+    \end{enumerate}
+\end{theorem}
 
+\begin{example}
+    Given $C \subseteq  \mathbb{E}$ that is nonempty (but not necessarily convex), let
+    \begin{align*}
+        d_{C}(x) = \inf_{y \in C}\| y-x \| 
+    \end{align*}
+    If $\mathbb{E}$ is Euclidean, then $\varphi_{C}(x) = \frac{1}{2}(\| x \|^{2} - 
+    d_{C}^{2}(x) )$ is convex.
+    Notice that 
+    \begin{align*}
+        d_{C}^{2}(x) = \inf_{y \in C}\| y-x \|^{2} = \inf_{y \in C} \{ \| x \|^{2} - 2
+        \langle x,y \rangle +\| y \|^{2}  \}\\
+        = \| x \| ^{2} -\sup_{y \in C} \{ 2\langle y,x \rangle -\| y \|^{2} \}
+    \end{align*}
+\end{example}
+
+\begin{theorem}[Convexity under partial minimization]
+    Let $f: \mathbb{E}\times \mathbb{V} \to (-\infty,\infty]$ be a convex function s.t.
+    $\forall  x \in \mathbb{E}, \exists y \in \mathbb{V}: \quad f(x,y) < \infty$.
+    Let $g: \mathbb{E} \to [-\infty,\infty)$ be defined 
+    \begin{align*}
+        g(x) := \inf_{y \in \mathbb{V}}f(x,y)
+    \end{align*}
+    Then $g$ is convex.
+\end{theorem}
+\begin{proof}
+    To show $\forall x_1,x_2 \in \mathbb{E}, \forall \alpha \in (0,1)$:
+    \begin{align*}
+        g((1-\alpha)x_1 + \alpha x_2) \le (1-\alpha)g(x_1) + \alpha g(x_2)
+    \end{align*}
+    \begin{enumerate}
+        \item[Case 1:] $g(x_1),g(x_2) > -\infty$. Take any $\epsilon > 0$, then $\exists 
+        y_1,y_2 \in \mathbb{E}$ s.t.
+        \begin{align*}
+            f(x_1,y_1) \le g(x_1) + \epsilon\\
+            f(x_2,y_2) \le g(x_2) + \epsilon
+        \end{align*}
+        $f$ is convex so:
+        \begin{align*}
+            f((1-\alpha)x_1+\alpha x_2, (1-\alpha)x_1 + \alpha x_2) \le (1-\alpha)f(x_1,y_1) + \alpha
+            f(x_2,y_2) \\
+            \le (1-\alpha)g(x_1) + \alpha g(x_2) + \epsilon
+        \end{align*}
+        Then by the definition of $g$, we have:
+        \begin{align*}
+            g((1-\alpha)x_1 + \alpha x_2) \le (1-\alpha)g(x_1) + \alpha g(x_2) + \epsilon
+            \quad \forall \epsilon > 0
+        \end{align*}
+        \item[Case 2:] Assume at least one of $g(x_1), g(x_2)$ is equal $-\infty$. Want to show:
+        \begin{align*}
+            g((1-\alpha)x_1 + \alpha x_2) = -\infty
+        \end{align*}
+        Take any $M \in \mathbb{R}$, then $\exists y_1 $ s.t. $f(x_1,y_1) \le M$.
+        And $\exists y_2$ s.t. $f(x_2,y_2) < \infty$. Since f is convex
+        \begin{align*}
+            f((1-\alpha)x_1 + \alpha x_2, (1-\alpha)y_1, \alpha y_2) \\
+            \le (1-\alpha)f(x_1,y_1) + \alpha f(x_2,y_2) \\
+            \le (1-\alpha)M + \alpha f(x_2,y_2)
+        \end{align*}
+        Then by the definition of $g$, we have
+        \begin{align*}
+            g((1-\alpha)x_1 + \alpha x_2) \le (1-\alpha)M + \alpha f(x_2,y_2)
+        \end{align*}
+        M is arbitrary.
+    \end{enumerate}
+\end{proof}
+
+\subsubsection{Infimal Convolution}
+\begin{definition}
+    $h_1,h_2: \mathbb{E} \to (-\infty,\infty]$, both proper
+    \begin{align*}
+        h_1 \square h_2(x) = \inf_{u \in \mathbb{E}}\{ h_1(u)+h_2(x-u) \}
+    \end{align*}
+\end{definition}
+    
 
 
 \end{document}
