--- a/math_commands.tex
+++ b/math_commands.tex
@@ -572,7 +572,16 @@
 
 % \DeclareMathOperator*{\argmax}{arg\,max}
 % \DeclareMathOperator*{\argmin}{arg\,min}
+\DeclareMathOperator*{\argmax}{argmax}
+\DeclareMathOperator*{\argmin}{argmin}
 
 \DeclareMathOperator{\sign}{sign}
 \DeclareMathOperator{\Tr}{Tr}
 \let\ab\allowbreak
+
+\newcommand\independent{\protect\mathpalette{\protect\independenT}{\perp}}
+\def\independenT#1#2{\mathrel{\rlap{$#1#2$}\mkern2mu{#1#2}}}
+
+
+\let\underbrace\LaTeXunderbrace
+\let\overbrace\LaTeXoverbrace
