--- a/math_commands.tex
+++ b/math_commands.tex
@@ -585,3 +585,20 @@
 
 \let\underbrace\LaTeXunderbrace
 \let\overbrace\LaTeXoverbrace
+
+% INTEGRALS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% From Pascal
+\def\Xint#1{\mathchoice
+{\XXint\displaystyle\textstyle{#1}}%
+{\XXint\textstyle\scriptstyle{#1}}%
+{\XXint\scriptstyle\scriptscriptstyle{#1}}%
+{\XXint\scriptscriptstyle%
+\scriptscriptstyle{#1}}%
+\!\int}
+\def\XXint#1#2#3{{\setbox0=\hbox{$#1{#2#3}{%
+\int}$ }
+\vcenter{\hbox{$#2#3$ }}\kern-.6\wd0}}
+\def\barint{\, \Xint -} % \, corrects the \! used in the definition
+\def\bariint{\barint_{} \kern-.4em \barint}
+\def\bariiint{\bariint_{} \kern-.4em \barint}
+\renewcommand{\iint}{\int_{}\kern-.34em \int} %\ minor space between the integrals
+\renewcommand{\iiint}{\iint_{}\kern-.34em \int} %\ minor space between the integrals
