--- a/preamble.sty
+++ b/preamble.sty
@@ -16,7 +16,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % AMS
-\usepackage{amsmath, amssymb, amsthm, amsbsy, mathabx}
+% \usepackage{amssymb,amsfonts,amsthm,mathrsfs}
+\usepackage{amsmath, amssymb, amsfonts, amsthm, amsbsy, mathabx}
 % Geometry
 \usepackage[margin=1in]{geometry} % For page margins
 \usepackage{setspace} % For double spacing
