--- a/cs839.tex
+++ b/cs839.tex
@@ -712,7 +712,7 @@ What is we are not optimizing over a compact set.
     \end{align*}
 \end{proposition}
 
-
+\newpage
 \section{Subdifferentiation}
 \begin{definition}
     The directional derivative of a function $f: \mathbb{E} \to [-\infty,\infty]$ at $\bar{\vx} \in \mathbb{E}$
